--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  
 
   & select {
     appearance: none;
@@ -25,6 +24,6 @@
   }
 
   & label {
-    @include mixins.form-label
+    @include mixins.form-label;
   }
 }
