Make app component responsive

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,51 +2,70 @@
 @use "components";
 @use "mixins";
 
-
 :root {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-  
-    color: abs.$color-text;
-    background-color: abs.$color-bg-body;
-  
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    min-width: 340px;
-    min-height: 100vh;
-  }
-  
-  p,
-  h1 {
-    margin: 0;
-  }
-  
-  button {
-    border: none;
-    cursor: pointer;
-  }
-  
-  #root {
-    padding: 2rem;
-  }
-  
-  .app {
-    margin: 0 auto;
-  }
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 
-  .label {
-    @include mixins.form-label;
-    margin-bottom: 6px;
+  color: abs.$color-text;
+  background-color: abs.$color-bg-body;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  min-width: 340px;
+  min-height: 100vh;
+}
+
+p,
+h1 {
+  margin: 0;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
+#root {
+  padding: 2rem;
+}
+
+.app {
+  width: 100%;
+  max-width: 440px;
+  margin: 0 auto;
+}
+
+.label {
+  @include mixins.form-label;
+  margin-bottom: 6px;
+}
+
+@include abs.screen-sm {
+  .app {
+    max-width: 700px;
   }
+}
+
+@include abs.screen-md {
+  .app {
+    max-width: 900px;
+  }
+}
+
+@include abs.screen-lg {
+  .app {
+    max-width: 1100px;
+  }
+}
